Bug 301382 - Panel overlaps widget explorer
Summary: Panel overlaps widget explorer
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget explorer (other bugs)
Version First Reported In: 4.8.90 (beta2)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-07 16:57 UTC by Janek Bevendorff
Modified: 2012-06-21 20:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments
Screen shot (80.89 KB, image/png)
2012-06-20 10:01 UTC, Janek Bevendorff
Details
Screen shot full width (192.87 KB, image/png)
2012-06-20 10:04 UTC, Janek Bevendorff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Janek Bevendorff 2012-06-07 16:57:27 UTC
When there is a panel at the bottom of the screen and the widget explorer is opened, the panel overlaps it.

Reproducible: Always

Steps to Reproduce:
1. Add a panel to the bottom of your screen
2. Right click on the desktop and click "Add Widget"
3. Try to use the scrollbar in the widget explorer
Actual Results:  
The scrollbar can't be used because the panel overlaps it.

Expected Results:  
The widget explorer should be placed above the panel (i.e. it shouldn't touch the edge of the screen but the upper edge of the panel).
Comment 1 Mark 2012-06-19 23:51:45 UTC
Could you post a screenshot of that?
Comment 2 Janek Bevendorff 2012-06-20 10:01:35 UTC
Sure.

As I wrote: you have to right-click on the desktop and then choose "Add Widgets".
The widget explorer is placed correctly, however, when you use the cashew button on the panel itself.
Comment 3 Janek Bevendorff 2012-06-20 10:01:57 UTC
Created attachment 71975 [details]
Screen shot
Comment 4 Janek Bevendorff 2012-06-20 10:04:43 UTC
Created attachment 71976 [details]
Screen shot full width
Comment 5 Mark 2012-06-20 11:05:02 UTC
Adding Marco to the CC since he is the author of this new QML based widget explorer. Thank you for posting screenshots.
Comment 6 Marco Martin 2012-06-21 09:22:30 UTC
Git commit c2dfd12512106ac84f8d04a5928c310801d00f2b by Marco Martin.
Committed on 21/06/2012 at 11:21.
Pushed by mart into branch 'master'.

keep the widget explorer window on top

M  +1    -0    plasma/desktop/shell/controllerwindow.cpp

http://commits.kde.org/kde-workspace/c2dfd12512106ac84f8d04a5928c310801d00f2b