keep the widget explorer window on top

BUG:301382